k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risalah-ingress
  namespace: risalah-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - app.risalah.sekneg.go.id
      secretName: risalah-tls
  rules:
    - host: app.risalah.sekneg.go.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: risalah-app
                port:
                  number: 3000
